<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/coordinator_reunion">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/reunion_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/margin_normal"
        android:layout_marginRight="@dimen/margin_normal"
        tools:context="com.project4.mareu.ui.fragments.ReunionFragment"
        tools:listitem="@layout/item_reunion"/>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_add_reu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/margin_moyen"
        android:backgroundTint="#e53935"
        android:src="@drawable/baseline_group_add_white_24dp"
        app:layout_anchorGravity="bottom|right" />

</android.support.design.widget.CoordinatorLayout>